--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -36,6 +36,7 @@ header {
   min-height: 500px;
   width: 100%;
   background: #161415 url(../images/header-background.jpg) no-repeat top center;
+  background: #161415 url(../images/header-background.webp) no-repeat top center;
   background-size: cover !important;
   -webkit-background-size: cover !important;
   text-align: center;
@@ -701,7 +702,11 @@ call-to-action .button {
 
 #testimonials {
   background: #1f1f1f url(../images/testimonials-bg.jpg) no-repeat center center;
+  background: #1f1f1f url(../images/testimonials-bg.webp) no-repeat center
+    center;
   background-size: cover !important;
+  background-position: center;
+  background-repeat: no-repeat;
   -webkit-background-size: cover !important;
   background-attachment: fixed;
 
@@ -808,6 +813,7 @@ call-to-action .button {
 .flexslider .slides > li {
   display: none;
   -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 /* Suggested container for slide animation setups. Can replace this with your own */
 .flex-container {
